# route/userRoute.js
@@ -1,9 +1,10 @@
 
-import {SignIn,SignUp,ResetPassword,ForgotPassword,Validateopt,Logout} from '../controller/usercontroller.js';
+import {SignIn,SignUp,ResetPassword,ForgotPassword,Validateopt,Logout,test} from '../controller/usercontroller.js';
 import express from 'express';
 import { signUpValidation,signInValidation,otpValidation,resetPasswordValidation,forgotpasswordValidation, } from '../utils/validation.js';
 import {authenticateToken} from "../middleware/authethicateToken.js"
 const route= express.Router();
+route.get("/Test",test)
 route.post('/signup',signUpValidation,SignUp)
 route.post('/signin',signInValidation,SignIn)
 route.post('/resetpassword',resetPasswordValidation,ResetPassword)
